--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Calendar Assistant</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
   <body>
 	<!-- <script src="index.js"></script> -->
     <h1>Calendar Assistant Project</h1>
+
+    <div>
+      <label for="calendarEntry">Calendar:</label>
+      <input type="text" id="calendarEntry">
+    </div>
+    
+    <div>
+      <label for="promptEntry">Prompt:</label>
+      <input type="text" id="promptEntry">
+    </div>
+
+    <button id="submitButton">Submit</button>
+
+    <p id="output">[Output placeholder]</p>
+
   </body>
 </html>
