--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calendar Assistant</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 	<!-- <script src="index.js"></script> -->
@@ -13,12 +13,12 @@
 
     <div>
       <label for="calendarEntry">Calendar:</label>
-      <input type="text" id="calendarEntry">
+      <textarea id="calendarEntry" rows="10" cols="50"></textarea>
     </div>
     
     <div>
       <label for="promptEntry">Prompt:</label>
-      <input type="text" id="promptEntry">
+      <textarea id="promptEntry" rows="10" cols="50"></textarea>
     </div>
 
     <button id="submitButton">Submit</button>
