Now properly displays ICal output

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     </div>
 
     <button id="submitButton" onclick="submit()">Submit</button>
+    <div id="spinner" class="loader hide"></div>
 
     <p id="errorText"></p>
 
