Added bundle for ical.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body onload="onLoad()">
+    <script src="bundle.js"></script>
+    <script src="cal-disp.js"></script>
 	  <script src="home.js"></script>
+
     <h1>Calendar Assistant Project</h1>
 
     <div>
@@ -41,6 +44,11 @@
     <p id="errorText"></p>
 
     <p id="output"></p>
+
+    <p>Input calendar</p>
+    <div id="inputCal"></div>
+    <p>Output calendar</p>
+    <div id="outputCal"></div>
 
   </body>
 </html>
