removed displays, since they needed recurrence event support

--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@
 
     <p id="output"></p>
 
-    <p>Input calendar</p>
+    <!-- <p>Input calendar</p>
     <div id="inputCal"></div>
     <p>Output calendar</p>
-    <div id="outputCal"></div>
+    <div id="outputCal"></div> -->
 
   </body>
 </html>
